@@ -1,3 +1,13 @@
+2010-06-13 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* sdas/linksrc/lksym.c,
+	* src/ds390/main.c,
+	* src/SDCCast.c: cosmetic changes
+	* src/SDCC.y: removed type_specifier2, moved AT into type_specifier,
+	    fixed bug 29979999
+	* src/SDCCsymt.c (addDecl): fixed char* __code __at(N) bug
+	* support/regression/tests/absolute.c: added test for bug 29979999
+
 2010-06-12 Borut Razem <borut.razem AT siol.net>
 
 	* device/include/asm/pic/features.h, device/include/pic/*.h,
@@ -105,6 +115,7 @@
 	  fixed bug #3006063: xor broken
 
 2010-05-23 Philipp Klaus Krause <pkk AT spth.de>
+
 	* support/regression/tests/bug1875933.c:
 	  Disabled recently introduced regression test on hc08, since it never worked there.
 
